readability fix

--- a/css/freecad.css
+++ b/css/freecad.css
@@ -202,6 +202,10 @@ footer ul {
 footer li {
     list-style-type: none;
 }
+textarea {
+    background: #eee;
+    color: #111;
+}
 
 @media (max-width: 1681px) {
     html {
